<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_input_trans_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_trans_id"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_input_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_amount"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_input_voucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_ori_voucher"
        android:inputType="number"
        android:maxLength="6"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_input_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_ori_reference"
        android:inputType="number"
        android:maxLength="12"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_input_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_ori_auth"
        android:inputType="text"
        android:maxLength="6"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_ori_date"
        android:inputType="date"
        android:maxLength="4"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edit_input_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_ori_time"
        android:inputType="number"
        android:maxLength="6"
        android:textColor="#000000"
        android:textColorHint="@color/colorAccent"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ok" />

</LinearLayout>